Modal text testing11

--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -238,7 +238,7 @@
 
           for (i = 0; i < acceptedPins.length; i++) {
               if (i === Number) { break; }
-              hasSelectedAtLeastOne = true
+              hasSelectedAtLeastOneInvoice = true
           }
 
           if (hasSelectedAtLeastOneInvoice){
