Modal text testing12

--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -118,6 +118,7 @@
 .hideDisplay {
   display: none;
   visibility: hidden;
+  opacity: 0;
 }
 
 	// table-striped>tbody>tr:nth-child(odd)>td.dark, .table-striped>tbody>tr:nth-child(odd)>th.dark{
