--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -102,9 +102,9 @@
                 <p>By pressing confirm you are agreeing to these new payment terms.</p>
               </div>
               <!-- <div class='noneSelected'> -->
-              <div id='noneSelected'>
+<!--               <div id='noneSelected'>
                 <p>No early payments selected. Are you sure?</p>
-              </div>
+              </div> -->
 
             </div>
             <div class="modal-footer" style="margin-top: 0px;">
