--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -95,14 +95,13 @@
               <h4 class="modal-title" id="myModalLabel">Confirmation</h4>
             </div>
             <div class="modal-body">
-              <!-- <div class="selectedContent"> -->
-              <div id="selectedContent">
+              hi
+<!--               <div id="selectedContent">
                 <p>You have selected early payment on <b><span class='earlyPaymentInvoiceNumber'></span></b> invoice(s), totalling <b><span class='earlyPaymentAmountAccepted'></span></b>.</p>
                 <p>This payment will be processed by Fat Face on <b><%= fulldate(@pins.first.prop_settlement_date) %></b>.</p>
                 <p>By pressing confirm you are agreeing to these new payment terms.</p>
               </div>
-              <!-- <div class='noneSelected'> -->
-<!--               <div id='noneSelected'>
+              <div id='noneSelected'>
                 <p>No early payments selected. Are you sure?</p>
               </div> -->
 
