--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -108,14 +108,44 @@
             </div>
             <div class="modal-footer" style="margin-top: 0px;">
               <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
-    <%#= f.submit "Confirm", class: "btn btn-primary" %>
-    <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
-    
+    <%= f.submit "Confirm", class: "btn btn-primary" %>
     <% end %>
             </div>
           </div>
         </div>
       </div>
+
+
+
+
+      <!-- Modal for when missing Radio Input-->
+      <div class="modal fade" id="myModalOKTEST" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">Oops...</h4>
+            </div>
+            <div class="modal-body">
+              You're missing some responses. Please select Accept / Reject for all invoices.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
 
       <!-- Modal for when missing Radio Input-->
       <div class="modal fade" id="myModalMissingRadioInput" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -233,7 +263,7 @@
   $(document).ready(function(){
     $("#modalBtn").click(function(){
       if (allRadioButtonsSelected()) {
-        $("#myModalOK").modal();
+        $("#myModalOKTEST").modal();
 
           var hasSelectedAtLeastOneInvoice = false
 
