--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -128,12 +128,12 @@
             </div>
             <div class="modal-body">
 
-              <div id="selectedContent">
+              <div id="selectedContent2">
                 <p>You have selected early payment on <b><span class='earlyPaymentInvoiceNumber'></span></b> invoice(s), totalling <b><span class='earlyPaymentAmountAccepted'></span></b>.</p>
                 <p>This payment will be processed by Fat Face on <b><%= fulldate(@pins.first.prop_settlement_date) %></b>.</p>
                 <p>By pressing confirm you are agreeing to these new payment terms.</p>
               </div>
-              <div id='noneSelected'>
+              <div id='noneSelected2'>
                 <p>No early payments selected. Are you sure?</p>
               </div>
 
@@ -282,11 +282,11 @@
           }
 
           if (hasSelectedAtLeastOneInvoice){
-            document.getElementById("noneSelected").className = "hideDisplay";
-            document.getElementById("selectedContent").className = "showDisplay";
+            document.getElementById("noneSelected2").className = "hideDisplay";
+            document.getElementById("selectedContent2").className = "showDisplay";
           } else {
-            document.getElementById("noneSelected").className = "showDisplay";
-            document.getElementById("selectedContent").className = "hideDisplay";
+            document.getElementById("noneSelected2").className = "showDisplay";
+            document.getElementById("selectedContent2").className = "hideDisplay";
           }
 
       } else {
