--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -108,13 +108,13 @@
             </div>
             <div class="modal-footer" style="margin-top: 0px;">
               <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
-    <%#= f.submit "Confirm", class: "btn btn-primary" %>
-    <% end %>
+    <%= f.submit "Confirm", class: "btn btn-primary" %>
+    
             </div>
           </div>
         </div>
       </div>
-
+<% end %>
       <!-- Modal for when missing Radio Input-->
       <div class="modal fade" id="myModalMissingRadioInput" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
