--- a/app/assets/stylesheets/pins.scss
+++ b/app/assets/stylesheets/pins.scss
@@ -97,11 +97,11 @@
   }
   .currency{
   	width: 130px;
-  	font-weight: bold;
+  	font-family:maven_probold
   }
   .currency2{
   	width: 100px;
-  	font-weight: bold;
+  	font-family: maven_probold
   }
   .btn-group{
   	width: 100%;
