--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,8 +11,8 @@
 		<br>
 		<div>All offers that you receive via email and within the portal are sent by Invoice<span style="color: #72B74C">ly</span> on behalf of Fat Face. You do not need to confirm with Fat Face that these offers are valid. Simply click <i>Accept</i> next to the relevant invoices and Fat Face will receive updated payment information. Invoice<span style="color: #72B74C">ly</span> will also send you confirmation by email of all payments agreed through the platform.</div>
 		<br>
-		<div>This portal is designed to be straightforward. If you have any questions, however, please check our FAQ page or email our customer service team at <%= mail_to 'hello@invoicely.co.uk' do %>hello@invoicely.co.uk<% end %>. Additionally, if your company has a large supply chain and could benefit from our technology, we would love to hear from you.</div>
+		<div>This portal is designed to be straightforward. If you have any questions, however, please check our FAQ page or email our customer service team at <%= mail_to 'hello@invoicely.co.uk' do %>hello@invoicely.co.uk<% end %>.</div>
 	</div>
-	<br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br>
 </div>
 
