--- a/app/views/pins/acceptedoffers.html.erb
+++ b/app/views/pins/acceptedoffers.html.erb
@@ -44,13 +44,13 @@
           <th class="middle date"><%= date(pin.invoice_date) %></th>
           <th class="middle date"><%= date(pin.due_date) %></th>
           <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
-          <th class="right currency"><%= currency(pin.gross_invoice_amount) %></th>
+          <th class="right currency"><%= currency(pin.gross_invoice_amount, pin.invoice_curr) %></th>
           <th class="middle date"><%= date(pin.offer_sent_date) %></th>
           <th class="middle date"><%= date(pin.offer_accepted_date) %></th>
           <!-- <th class="middle"><%#= pin.status %></th> -->
           <th class="middle date"><%= date(pin.prop_settlement_date) %></th>
-          <th class="right currency" ><%= currency(pin.offer_amount) %></th>
-          <!-- <th class="right" ><%#= currency(pin.saving) %></th> -->
+          <th class="right currency" ><%= currency(pin.offer_amount, pin.invoice_curr) %></th>
+          <!-- <th class="right" ><%#= currency(pin.saving, pin.invoice_curr) %></th> -->
         </tr>
       <% end %>  
     </tbody>
@@ -93,13 +93,13 @@
             <th class="middle date"><%= date(pin.invoice_date) %></th>
             <th class="middle date"><%= date(pin.due_date) %></th>
             <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
-            <th class="right currency" ><%= currency(pin.gross_invoice_amount) %></th>
+            <th class="right currency" ><%= currency(pin.gross_invoice_amount, pin.invoice_curr) %></th>
             <th class="middle date"><%= date(pin.offer_sent_date) %></th>
             <th class="middle thin"><%= pin.status %></th>
             <th class="middle date"><%= date(pin.offer_accepted_date) %></th>
             <th class="middle date"><%= date(pin.prop_settlement_date) %></th>
-            <th class="right currency" ><%= currency(pin.offer_amount) %></th>
-            <!-- <th class="right" ><%#= currency(pin.saving) %></th> -->
+            <th class="right currency" ><%= currency(pin.offer_amount, pin.invoice_curr) %></th>
+            <!-- <th class="right" ><%#= currency(pin.saving, pin.invoice_curr) %></th> -->
           </tr>
         <% end %>  
       </tbody>
