--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -51,12 +51,12 @@
           <th class="middle date"><%= date(pin.invoice_date) %></th>
           <th class="middle date"><%= date(pin.due_date) %></th>
           <!-- <th class="middle"><%#= pin.invoice_curr %></th> -->
-          <th class="right currency2" ><%= currency(pin.gross_invoice_amount) %></th>
+          <th class="right currency2" ><%= currency(pin.gross_invoice_amount, pin.invoice_curr) %></th>
           <th class="left"  ><%= pin.supplier_email %></th>
           <th class="middle"><%= pin.status %></th>
           <th class="middle date"><%= date(pin.prop_settlement_date) %></th>
-          <th class="right currency2" ><%= currency(pin.offer_amount) %></th>
-          <th class="right currency2" ><%= currency(pin.saving) %></th>
+          <th class="right currency2" ><%= currency(pin.offer_amount, pin.invoice_curr) %></th>
+          <th class="right currency2" ><%= currency(pin.saving, pin.invoice_curr) %></th>
           <th class="middle date"><%= date(pin.offer_expirey_date) %></th>
           <th class="middle"><%= link_to edit_pin_path(pin) do %><span class="glyphicon glyphicon-pencil"></span> Edit<% end %></th>
           <th class="middle"><%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %><span class="glyphicon glyphicon-trash"></span> Delete<% end %></th>
