--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -50,12 +50,12 @@
               <th class="middle date"><%= date(pin.invoice_date) %></th>
               <th class="middle date"><%= date(pin.due_date) %></th>
               <!-- <th class="middle thin"><%#= pin.invoice_curr %></th> -->
-              <th class="right currency"><%= currency(pin.gross_invoice_amount) %></th>
+              <th class="right currency"><%= currency(pin.gross_invoice_amount, pin.invoice_curr) %></th>
               <!-- <th class="middle"><%#= pin.status %></th> -->
               <th class="middle date dark"><%= date(pin.prop_settlement_date) %></th>
               <th class="right date dark"><%= (pin.due_date - pin.prop_settlement_date).to_i %> days</th>
-              <th class="right currency dark"><%= currency(pin.offer_amount) %></th>
-              <!-- <th class="right"><%#= currency(pin.saving) %></th> -->
+              <th class="right currency dark"><%= currency(pin.offer_amount, pin.invoice_curr) %></th>
+              <!-- <th class="right"><%#= currency(pin.saving, pin.invoice_curr) %></th> -->
               <th class="middle date dark"><%= date(pin.offer_expirey_date) %></th>
               <th class="middle buttons dark"> <%= render :partial => 'accept_reject_form', :locals => {:pin => pin} %> </th>
             </tr>
