--- a/app/views/offer_mailer/response_email.html.erb
+++ b/app/views/offer_mailer/response_email.html.erb
@@ -351,7 +351,7 @@ body, table, td {font-family: Arial, Helvetica, sans-serif !important;}
                                              <!-- Spacing -->
    			                                 <tr>
    			                                   <td style="font-family: 'Maven Pro', Arial, sans-serif !important; font-size: 16px; color: #333333; text-align:left;line-height: 24px;">
-   			                                      You will receive <b><%= currency(totalEarlyPayment, @pinsaccepted.first.invoice_curr) %></b> on <b><%= fulldate(date) %></b>.
+   			                                      A payment of <b><%= currency(totalEarlyPayment, @pinsaccepted.first.invoice_curr) %></b> will be processed on <b><%= fulldate(date) %></b>.
    			                                   </td>
    			                                 </tr>
                                           <% end %>
